gcc/testsuite/rust/rustc/ui/issues/issue-33571.rs
#[derive(Clone,
         Sync, // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
         Copy)]
enum Foo {}

fn main() {}

